--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HOST='https://pressa-backend.herokuapp.com/'
+HOST='https://exam-8-back.herokuapp.com/'
 
 PGHOST=heffalump.db.elephantsql.com
 PGPORT=5432
